@@ -19,10 +19,12 @@ package com.cloud.hypervisor.vmware.manager;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.rmi.RemoteException;
 import java.time.Duration;
 import java.time.Instant;
@@ -43,10 +45,11 @@ import javax.inject.Inject;
 import javax.naming.ConfigurationException;
 import javax.persistence.EntityExistsException;
 
-import com.cloud.hypervisor.vmware.util.VmwareClient;
 import org.apache.cloudstack.api.command.admin.zone.AddVmwareDcCmd;
 import org.apache.cloudstack.api.command.admin.zone.ImportVsphereStoragePoliciesCmd;
 import org.apache.cloudstack.api.command.admin.zone.ListVmwareDcVmsCmd;
+import org.apache.cloudstack.api.command.admin.zone.ListVmwareDcHostsCmd;
+import org.apache.cloudstack.api.command.admin.zone.ListVmwareDcItems;
 import org.apache.cloudstack.api.command.admin.zone.ListVmwareDcsCmd;
 import org.apache.cloudstack.api.command.admin.zone.ListVsphereStoragePoliciesCmd;
 import org.apache.cloudstack.api.command.admin.zone.ListVsphereStoragePolicyCompatiblePoolsCmd;
@@ -67,7 +70,6 @@ import org.apache.cloudstack.vm.UnmanagedInstanceTO;
 import org.apache.commons.codec.digest.DigestUtils;
 import org.apache.commons.collections.MapUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.apache.log4j.Logger;
 
 import com.amazonaws.util.CollectionUtils;
 import com.cloud.agent.AgentManager;
@@ -87,6 +89,7 @@ import com.cloud.dc.ClusterDetailsDao;
 import com.cloud.dc.ClusterVO;
 import com.cloud.dc.ClusterVSMMapVO;
 import com.cloud.dc.DataCenterVO;
+import com.cloud.dc.VmwareDatacenter;
 import com.cloud.dc.VsphereStoragePolicy;
 import com.cloud.dc.VsphereStoragePolicyVO;
 import com.cloud.dc.dao.ClusterDao;
@@ -112,7 +115,8 @@ import com.cloud.hypervisor.HypervisorGuruManager;
 import com.cloud.hypervisor.dao.HypervisorCapabilitiesDao;
 import com.cloud.hypervisor.vmware.LegacyZoneVO;
 import com.cloud.hypervisor.vmware.VmwareCleanupMaid;
-import com.cloud.dc.VmwareDatacenter;
+import com.cloud.hypervisor.vmware.util.VmwareClient;
+import com.cloud.hypervisor.vmware.util.VmwareClientException;
 import com.cloud.hypervisor.vmware.VmwareDatacenterService;
 import com.cloud.dc.VmwareDatacenterVO;
 import com.cloud.hypervisor.vmware.VmwareDatacenterZoneMap;
@@ -169,12 +173,18 @@ import com.cloud.utils.ssh.SshHelper;
 import com.cloud.vm.DomainRouterVO;
 import com.cloud.vm.dao.UserVmCloneSettingDao;
 import com.cloud.vm.dao.VMInstanceDao;
+
+// TODO move these items upstream?
 import com.vmware.pbm.PbmProfile;
 import com.vmware.vim25.AboutInfo;
 import com.vmware.vim25.ManagedObjectReference;
+import com.vmware.vim25.InvalidLocaleFaultMsg;
+import com.vmware.vim25.InvalidLoginFaultMsg;
+import com.vmware.vim25.RuntimeFaultFaultMsg;
+import com.vmware.vim25.InvalidPropertyFaultMsg;
+import org.jetbrains.annotations.NotNull;
 
 public class VmwareManagerImpl extends ManagerBase implements VmwareManager, VmwareStorageMount, Listener, VmwareDatacenterService, Configurable {
-    private static final Logger s_logger = Logger.getLogger(VmwareManagerImpl.class);
 
     private static final long SECONDS_PER_MINUTE = 60;
     private static final int DEFAULT_PORTS_PER_DV_PORT_GROUP_VSPHERE4_x = 256;
@@ -247,11 +257,11 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
     private StorageLayer _storage;
     private final String _privateNetworkVSwitchName = "vSwitch0";
 
-    private int _portsPerDvPortGroup = DEFAULT_PORTS_PER_DV_PORT_GROUP;
+    private final int _portsPerDvPortGroup = DEFAULT_PORTS_PER_DV_PORT_GROUP;
     private boolean _fullCloneFlag;
     private boolean _instanceNameFlag;
     private String _serviceConsoleName;
-    private String _managemetPortGroupName;
+    private String _managementPortGroupName;
     private String _defaultSystemVmNicAdapterType = VirtualEthernetCardType.E1000.toString();
     private String _recycleHungWorker = "false";
     private int _additionalPortRangeStart;
@@ -265,7 +275,7 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
 
     private final Random _rand = new Random(System.currentTimeMillis());
 
-    private static ScheduledExecutorService templateCleanupScheduler = Executors.newScheduledThreadPool(1, new NamedThreadFactory("Vmware-FullyClonedTemplateCheck"));;
+    private static final ScheduledExecutorService templateCleanupScheduler = Executors.newScheduledThreadPool(1, new NamedThreadFactory("Vmware-FullyClonedTemplateCheck"));
 
     private final VmwareStorageManager _storageMgr;
     private final GlobalLock _exclusiveOpLock = GlobalLock.getInternLock("vmware.exclusive.op");
@@ -284,10 +294,10 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
             String destIsoMd5 = DigestUtils.md5Hex(new FileInputStream(destIso));
             copyNeeded = !StringUtils.equals(srcIsoMd5, destIsoMd5);
             if (copyNeeded) {
-                s_logger.debug(String.format("MD5 checksum: %s for source ISO: %s is different from MD5 checksum: %s from destination ISO: %s", srcIsoMd5, srcIso.getAbsolutePath(), destIsoMd5, destIso.getAbsolutePath()));
+                logger.debug(String.format("MD5 checksum: %s for source ISO: %s is different from MD5 checksum: %s from destination ISO: %s", srcIsoMd5, srcIso.getAbsolutePath(), destIsoMd5, destIso.getAbsolutePath()));
             }
         } catch (IOException e) {
-            s_logger.debug(String.format("Unable to compare MD5 checksum for systemvm.iso at source: %s and destination: %s", srcIso.getAbsolutePath(), destIso.getAbsolutePath()), e);
+            logger.debug(String.format("Unable to compare MD5 checksum for systemvm.iso at source: %s and destination: %s", srcIso.getAbsolutePath(), destIso.getAbsolutePath()), e);
         }
         return copyNeeded;
     }
@@ -303,10 +313,10 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
     }
     @Override
     public boolean configure(String name, Map<String, Object> params) throws ConfigurationException {
-        s_logger.info("Configure VmwareManagerImpl, manager name: " + name);
+        logger.info("Configure VmwareManagerImpl, manager name: " + name);
 
         if (!_configDao.isPremium()) {
-            s_logger.error("Vmware component can only run under premium distribution");
+            logger.error("Vmware component can only run under premium distribution");
             throw new ConfigurationException("Vmware component can only run under premium distribution");
         }
 
@@ -314,7 +324,7 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
         if (_instance == null) {
             _instance = "DEFAULT";
         }
-        s_logger.info("VmwareManagerImpl config - instance.name: " + _instance);
+        logger.info("VmwareManagerImpl config - instance.name: " + _instance);
 
         _mountParent = _configDao.getValue(Config.MountParent.key());
         if (_mountParent == null) {
@@ -324,7 +334,7 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
         if (_instance != null) {
             _mountParent = _mountParent + File.separator + _instance;
         }
-        s_logger.info("VmwareManagerImpl config - _mountParent: " + _mountParent);
+        logger.info("VmwareManagerImpl config - _mountParent: " + _mountParent);
 
         String value = (String)params.get("scripts.timeout");
         _timeout = NumbersUtil.parseInt(value, 1440) * 1000;
@@ -349,9 +359,9 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
             _serviceConsoleName = "Service Console";
         }
 
-        _managemetPortGroupName = _configDao.getValue(Config.VmwareManagementPortGroup.key());
-        if (_managemetPortGroupName == null) {
-            _managemetPortGroupName = "Management Network";
+        _managementPortGroupName = _configDao.getValue(Config.VmwareManagementPortGroup.key());
+        if (_managementPortGroupName == null) {
+            _managementPortGroupName = "Management Network";
         }
 
         _defaultSystemVmNicAdapterType = _configDao.getValue(Config.VmwareSystemVmNicDeviceType.key());
@@ -361,18 +371,18 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
 
         _additionalPortRangeStart = NumbersUtil.parseInt(_configDao.getValue(Config.VmwareAdditionalVncPortRangeStart.key()), 59000);
         if (_additionalPortRangeStart > 65535) {
-            s_logger.warn("Invalid port range start port (" + _additionalPortRangeStart + ") for additional VNC port allocation, reset it to default start port 59000");
+            logger.warn("Invalid port range start port (" + _additionalPortRangeStart + ") for additional VNC port allocation, reset it to default start port 59000");
             _additionalPortRangeStart = 59000;
         }
 
         _additionalPortRangeSize = NumbersUtil.parseInt(_configDao.getValue(Config.VmwareAdditionalVncPortRangeSize.key()), 1000);
         if (_additionalPortRangeSize < 0 || _additionalPortRangeStart + _additionalPortRangeSize > 65535) {
-            s_logger.warn("Invalid port range size (" + _additionalPortRangeSize + " for range starts at " + _additionalPortRangeStart);
+            logger.warn("Invalid port range size (" + _additionalPortRangeSize + " for range starts at " + _additionalPortRangeStart);
             _additionalPortRangeSize = Math.min(1000, 65535 - _additionalPortRangeStart);
         }
 
         _vCenterSessionTimeout = NumbersUtil.parseInt(_configDao.getValue(Config.VmwareVcenterSessionTimeout.key()), 1200) * 1000;
-        s_logger.info("VmwareManagerImpl config - vmware.vcenter.session.timeout: " + _vCenterSessionTimeout);
+        logger.info("VmwareManagerImpl config - vmware.vcenter.session.timeout: " + _vCenterSessionTimeout);
 
         _recycleHungWorker = _configDao.getValue(Config.VmwareRecycleHungWorker.key());
         if (_recycleHungWorker == null || _recycleHungWorker.isEmpty()) {
@@ -384,13 +394,13 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
             _rootDiskController = DiskControllerType.ide.toString();
         }
 
-        s_logger.info("Additional VNC port allocation range is settled at " + _additionalPortRangeStart + " to " + (_additionalPortRangeStart + _additionalPortRangeSize));
+        logger.info("Additional VNC port allocation range is settled at " + _additionalPortRangeStart + " to " + (_additionalPortRangeStart + _additionalPortRangeSize));
 
         ((VmwareStorageManagerImpl)_storageMgr).configure(params);
 
         _agentMgr.registerForHostEvents(this, true, true, true);
 
-        s_logger.info("VmwareManagerImpl has been successfully configured");
+        logger.info("VmwareManagerImpl has been successfully configured");
         return true;
     }
 
@@ -402,13 +412,13 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
         startTemplateCleanJobSchedule();
         startupCleanup(_mountParent);
 
-        s_logger.info("start done");
+        logger.info("start done");
         return true;
     }
 
     @Override
     public boolean stop() {
-        s_logger.info("shutting down scheduled tasks");
+        logger.info("shutting down scheduled tasks");
         templateCleanupScheduler.shutdown();
         shutdownCleanup();
         return true;
@@ -448,9 +458,9 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
         vlanId = mgmtTrafficLabelObj.getVlanId();
         vSwitchType = mgmtTrafficLabelObj.getVirtualSwitchType().toString();
 
-        s_logger.info("Preparing network on host " + hostMo.getContext().toString() + " for " + privateTrafficLabel);
+        logger.info("Preparing network on host " + hostMo.getContext().toString() + " for " + privateTrafficLabel);
         VirtualSwitchType vsType = VirtualSwitchType.getType(vSwitchType);
-        //The management network is probably always going to be a physical network with islation type of vlans, so assume BroadcastDomainType VLAN
+        //The management network is probably always going to be a physical network with isolation type of vlans, so assume BroadcastDomainType VLAN
         if (VirtualSwitchType.StandardVirtualSwitch == vsType) {
             HypervisorHostHelper.prepareNetwork(vSwitchName, "cloud.private", hostMo, vlanId, null, null, 180000, false, BroadcastDomainType.Vlan, null, null);
         }
@@ -459,12 +469,12 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
             AboutInfo about = hostMo.getHostAboutInfo();
             if (about != null) {
                 String version = about.getApiVersion();
-                if (version != null && (version.equals("4.0") || version.equals("4.1")) && _portsPerDvPortGroup < DEFAULT_PORTS_PER_DV_PORT_GROUP_VSPHERE4_x) {
+                if (version != null && (version.equals("4.0") || version.equals("4.1")) ) { // && _portsPerDvPortGroup < DEFAULT_PORTS_PER_DV_PORT_GROUP_VSPHERE4_x)
                     portsPerDvPortGroup = DEFAULT_PORTS_PER_DV_PORT_GROUP_VSPHERE4_x;
                 }
             }
             HypervisorHostHelper.prepareNetwork(vSwitchName, "cloud.private", hostMo, vlanId, null, null, null, 180000,
-                    vsType, portsPerDvPortGroup, null, false, BroadcastDomainType.Vlan, null, null);
+                    vsType, portsPerDvPortGroup, null, false, BroadcastDomainType.Vlan, null, null, null);
         }
     }
 
@@ -482,7 +492,7 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
             }
 
             URI uriForHost = new URI(UriUtils.encodeURIComponent(clusterDetails.get("url") + "/" + host.getName()));
-            morSrcHost = serviceContext.getHostMorByPath(URLDecoder.decode(uriForHost.getPath(), "UTF-8"));
+            morSrcHost = serviceContext.getHostMorByPath(URLDecoder.decode(uriForHost.getPath(), StandardCharsets.UTF_8));
             if (morSrcHost == null) {
                 return null;
             }
@@ -498,19 +508,18 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
             throw new CloudRuntimeException("Invalid serviceContext");
         }
         ManagedObjectReference mor = serviceContext.getHostMorByPath(hostInventoryPath);
-        String privateTrafficLabel = null;
+        String privateTrafficLabel;
         privateTrafficLabel = serviceContext.getStockObject("privateTrafficLabel");
         if (privateTrafficLabel == null) {
             privateTrafficLabel = _privateNetworkVSwitchName;
         }
 
         if (mor != null) {
-            List<ManagedObjectReference> returnedHostList = new ArrayList<ManagedObjectReference>();
+            List<ManagedObjectReference> returnedHostList = new ArrayList<>();
 
             if (mor.getType().equals("ComputeResource")) {
                 List<ManagedObjectReference> hosts = serviceContext.getVimClient().getDynamicProperty(mor, "host");
-                assert (hosts != null && hosts.size() > 0);
-
+                assert (CollectionUtils.isNullOrEmpty(hosts));
                 // For ESX host, we need to enable host firewall to allow VNC access
                 HostMO hostMo = new HostMO(serviceContext, hosts.get(0));
 
@@ -521,13 +530,13 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
                 List<ManagedObjectReference> hosts = serviceContext.getVimClient().getDynamicProperty(mor, "host");
                 assert (hosts != null);
 
-                if (hosts.size() > 0) {
-                    AboutInfo about = (AboutInfo)(serviceContext.getVimClient().getDynamicProperty(hosts.get(0), "config.product"));
+                if (!hosts.isEmpty()) {
+                    AboutInfo about = serviceContext.getVimClient().getDynamicProperty(hosts.get(0), "config.product");
                     String version = about.getApiVersion();
                     int maxHostsPerCluster = _hvCapabilitiesDao.getMaxHostsPerCluster(HypervisorType.VMware, version);
                     if (hosts.size() > maxHostsPerCluster) {
                         String msg = "Failed to add VMware cluster as size is too big, current size: " + hosts.size() + ", max. size: " + maxHostsPerCluster;
-                        s_logger.error(msg);
+                        logger.error(msg);
                         throw new DiscoveredWithErrorException(msg);
                     }
                 }
@@ -551,12 +560,12 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
                 returnedHostList.add(mor);
                 return returnedHostList;
             } else {
-                s_logger.error("Unsupport host type " + mor.getType() + ":" + mor.getValue() + " from inventory path: " + hostInventoryPath);
+                logger.error("Unsupport host type {}:{} from inventory path: {}", mor.getType(), mor.getValue(), hostInventoryPath);
                 return null;
             }
         }
 
-        s_logger.error("Unable to find host from inventory path: " + hostInventoryPath);
+        logger.error("Unable to find host from inventory path: " + hostInventoryPath);
         return null;
     }
 
@@ -571,13 +580,13 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
         }
 
         if (secUrl == null) {
-            s_logger.info("Secondary storage is either not having free capacity or not NFS, then use cache/staging storage instead");
+            logger.info("Secondary storage is either not having free capacity or not NFS, then use cache/staging storage instead");
             DataStore cacheStore = _dataStoreMgr.getImageCacheStore(dcId);
             if (cacheStore != null) {
                 secUrl = cacheStore.getUri();
                 secId = cacheStore.getId();
             } else {
-                s_logger.warn("No cache/staging storage found when NFS secondary storage with free capacity not available or non-NFS secondary storage is used");
+                logger.warn("No cache/staging storage found when NFS secondary storage with free capacity not available or non-NFS secondary storage is used");
             }
         }
 
@@ -597,12 +606,12 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
         }
 
         if (urlIdList.isEmpty()) {
-            s_logger.info("Secondary storage is either not having free capacity or not NFS, then use cache/staging storage instead");
+            logger.info("Secondary storage is either not having free capacity or not NFS, then use cache/staging storage instead");
             DataStore cacheStore = _dataStoreMgr.getImageCacheStore(dcId);
             if (cacheStore != null) {
                 urlIdList.add(new Pair<>(cacheStore.getUri(), cacheStore.getId()));
             } else {
-                s_logger.warn("No cache/staging storage found when NFS secondary storage with free capacity not available or non-NFS secondary storage is used");
+                logger.warn("No cache/staging storage found when NFS secondary storage with free capacity not available or non-NFS secondary storage is used");
             }
         }
 
@@ -616,13 +625,13 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
 
     @Override
     public String getManagementPortGroupName() {
-        return _managemetPortGroupName;
+        return _managementPortGroupName;
     }
 
     @Override
     public String getManagementPortGroupByHost(HostMO hostMo) throws Exception {
         if (hostMo.getHostType() == VmwareHostType.ESXi) {
-            return _managemetPortGroupName;
+            return _managementPortGroupName;
         }
         return _serviceConsoleName;
     }
@@ -632,7 +641,7 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
         params.put("vmware.create.full.clone", _fullCloneFlag);
         params.put("vm.instancename.flag", _instanceNameFlag);
         params.put("service.console.name", _serviceConsoleName);
-        params.put("management.portgroup.name", _managemetPortGroupName);
+        params.put("management.portgroup.name", _managementPortGroupName);
         params.put("vmware.root.disk.controller", _rootDiskController);
         params.put("vmware.data.disk.controller", _dataDiskController);
         params.put("vmware.recycle.hung.wokervm", _recycleHungWorker);
@@ -651,33 +660,33 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
 
     @Override
     public boolean needRecycle(String workerTag) {
-        if (s_logger.isInfoEnabled())
-            s_logger.info("Check to see if a worker VM with tag " + workerTag + " needs to be recycled");
+        if (logger.isInfoEnabled())
+            logger.info("Check to see if a worker VM with tag " + workerTag + " needs to be recycled");
 
         if (workerTag == null || workerTag.isEmpty()) {
-            s_logger.error("Invalid worker VM tag " + workerTag);
+            logger.error("Invalid worker VM tag " + workerTag);
             return false;
         }
 
-        String tokens[] = workerTag.split("-");
+        String[] tokens = workerTag.split("-");
         if (tokens.length != 3) {
-            s_logger.error("Invalid worker VM tag " + workerTag);
+            logger.error("Invalid worker VM tag " + workerTag);
             return false;
         }
 
         long startTick = Long.parseLong(tokens[0]);
-        long msid = Long.parseLong(tokens[1]);
-        long runid = Long.parseLong(tokens[2]);
+        long msId = Long.parseLong(tokens[1]);
+        long runId = Long.parseLong(tokens[2]);
 
-        if (msHostPeerDao.countStateSeenInPeers(msid, runid, ManagementServerHost.State.Down) > 0) {
-            if (s_logger.isInfoEnabled())
-                s_logger.info("Worker VM's owner management server node has been detected down from peer nodes, recycle it");
+        if (msHostPeerDao.countStateSeenInPeers(msId, runId, ManagementServerHost.State.Down) > 0) {
+            if (logger.isInfoEnabled())
+                logger.info("Worker VM's owner management server node has been detected down from peer nodes, recycle it");
             return true;
         }
 
-        if (runid != clusterManager.getManagementRunId(msid)) {
-            if (s_logger.isInfoEnabled())
-                s_logger.info("Worker VM's owner management server has changed runid, recycle it");
+        if (runId != clusterManager.getManagementRunId(msId)) {
+            if (logger.isInfoEnabled())
+                logger.info("Worker VM's owner management server has changed runid, recycle it");
             return true;
         }
 
@@ -688,13 +697,13 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
         Instant end = start.plusSeconds(2 * (AsyncJobManagerImpl.JobExpireMinutes.value() + AsyncJobManagerImpl.JobCancelThresholdMinutes.value()) * SECONDS_PER_MINUTE);
         Instant now = Instant.now();
         if(s_vmwareCleanOldWorderVMs.value() && now.isAfter(end)) {
-            if(s_logger.isInfoEnabled()) {
-                s_logger.info("Worker VM expired, seconds elapsed: " + Duration.between(start,now).getSeconds());
+            if(logger.isInfoEnabled()) {
+                logger.info("Worker VM expired, seconds elapsed: " + Duration.between(start,now).getSeconds());
             }
             return true;
         }
-        if (s_logger.isTraceEnabled()) {
-            s_logger.trace("Worker VM with tag '" + workerTag + "' does not need recycling, yet." +
+        if (logger.isTraceEnabled()) {
+            logger.trace("Worker VM with tag '" + workerTag + "' does not need recycling, yet." +
                     "But in " + Duration.between(now,end).getSeconds() + " seconds, though");
         }
         return false;
@@ -712,8 +721,8 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
                     File patchFolder = new File(mountPoint + "/systemvm");
                     if (!patchFolder.exists()) {
                         if (!patchFolder.mkdirs()) {
-                            String msg = "Unable to create systemvm folder on secondary storage. location: " + patchFolder.toString();
-                            s_logger.error(msg);
+                            String msg = "Unable to create systemvm folder on secondary storage. location: " + patchFolder;
+                            logger.error(msg);
                             throw new CloudRuntimeException(msg);
                         }
                     }
@@ -721,23 +730,23 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
                     File srcIso = getSystemVMPatchIsoFile();
                     File destIso = new File(mountPoint + "/systemvm/" + getSystemVMIsoFileNameOnDatastore());
                     if (isSystemVmIsoCopyNeeded(srcIso, destIso)) {
-                        s_logger.info("Inject SSH key pairs before copying systemvm.iso into secondary storage");
+                        logger.info("Inject SSH key pairs before copying systemvm.iso into secondary storage");
                         _configServer.updateKeyPairs();
 
-                        s_logger.info("Copy System VM patch ISO file to secondary storage. source ISO: " + srcIso.getAbsolutePath() + ", destination: " +
+                        logger.info("Copy System VM patch ISO file to secondary storage. source ISO: " + srcIso.getAbsolutePath() + ", destination: " +
                                 destIso.getAbsolutePath());
                         try {
                             FileUtil.copyfile(srcIso, destIso);
                         } catch (IOException e) {
-                            s_logger.error("Unexpected exception ", e);
+                            logger.error("Unexpected exception ", e);
 
-                            String msg = "Unable to copy systemvm ISO on secondary storage. src location: " + srcIso.toString() + ", dest location: " + destIso;
-                            s_logger.error(msg);
+                            String msg = "Unable to copy systemvm ISO on secondary storage. src location: " + srcIso + ", dest location: " + destIso;
+                            logger.error(msg);
                             throw new CloudRuntimeException(msg);
                         }
                     } else {
-                        if (s_logger.isTraceEnabled()) {
-                            s_logger.trace("SystemVM ISO file " + destIso.getPath() + " already exists");
+                        if (logger.isTraceEnabled()) {
+                            logger.trace("SystemVM ISO file " + destIso.getPath() + " already exists");
                         }
                     }
                 } finally {
@@ -773,9 +782,8 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
             isoFile = new File("/usr/share/cloudstack-common/vms/systemvm.iso");
         }
 
-        assert (isoFile != null);
         if (!isoFile.exists()) {
-            s_logger.error("Unable to locate systemvm.iso in your setup at " + isoFile.toString());
+            logger.error("Unable to locate systemvm.iso in your setup at " + isoFile);
         }
         return isoFile;
     }
@@ -790,16 +798,16 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
         if (keyFile == null || !keyFile.exists()) {
             keyFile = new File("/usr/share/cloudstack-common/scripts/vm/systemvm/id_rsa.cloud");
         }
-        assert (keyFile != null);
+
         if (!keyFile.exists()) {
-            s_logger.error("Unable to locate id_rsa.cloud in your setup at " + keyFile.toString());
+            logger.error("Unable to locate id_rsa.cloud in your setup at " + keyFile);
         }
         return keyFile;
     }
 
     @Override
     public String getMountPoint(String storageUrl, String nfsVersion) {
-        String mountPoint = null;
+        String mountPoint;
         synchronized (_storageMounts) {
             mountPoint = _storageMounts.get(storageUrl);
             if (mountPoint != null) {
@@ -810,13 +818,13 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
             try {
                 uri = new URI(storageUrl);
             } catch (URISyntaxException e) {
-                s_logger.error("Invalid storage URL format ", e);
+                logger.error("Invalid storage URL format ", e);
                 throw new CloudRuntimeException("Unable to create mount point due to invalid storage URL format " + storageUrl);
             }
 
             mountPoint = mount(uri.getHost() + ":" + uri.getPath(), _mountParent, nfsVersion);
             if (mountPoint == null) {
-                s_logger.error("Unable to create mount point for " + storageUrl);
+                logger.error("Unable to create mount point for " + storageUrl);
                 return "/mnt/sec"; // throw new CloudRuntimeException("Unable to create mount point for " + storageUrl);
             }
 
@@ -829,7 +837,7 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
         String mountPoint = null;
         long mshostId = ManagementServerNode.getManagementServerId();
         for (int i = 0; i < 10; i++) {
-            String mntPt = parent + File.separator + String.valueOf(mshostId) + "." + Integer.toHexString(_rand.nextInt(Integer.MAX_VALUE));
+            String mntPt = parent + File.separator + mshostId + "." + Integer.toHexString(_rand.nextInt(Integer.MAX_VALUE));
             File file = new File(mntPt);
             if (!file.exists()) {
                 if (_storage.mkdir(mntPt)) {
@@ -837,14 +845,14 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
                     break;
                 }
             }
-            s_logger.error("Unable to create mount: " + mntPt);
+            logger.error("Unable to create mount: " + mntPt);
         }
 
         return mountPoint;
     }
 
     private void startupCleanup(String parent) {
-        s_logger.info("Cleanup mounted NFS mount points used in previous session");
+        logger.info("Cleanup mounted NFS mount points used in previous session");
 
         long mshostId = ManagementServerNode.getManagementServerId();
 
@@ -852,14 +860,13 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
         List<String> mounts = _storage.listMountPointsByMsHost(parent, mshostId);
         if (mounts != null && !mounts.isEmpty()) {
             for (String mountPoint : mounts) {
-                s_logger.info("umount NFS mount from previous session: " + mountPoint);
+                logger.info("umount NFS mount from previous session: " + mountPoint);
 
-                String result = null;
-                Script command = new Script(true, "umount", _timeout, s_logger);
+                Script command = new Script(true, "umount", _timeout, logger);
                 command.add(mountPoint);
-                result = command.execute();
+                String result = command.execute();
                 if (result != null) {
-                    s_logger.warn("Unable to umount " + mountPoint + " due to " + result);
+                    logger.warn("Unable to umount " + mountPoint + " due to " + result);
                 }
                 File file = new File(mountPoint);
                 if (file.exists()) {
@@ -870,17 +877,16 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
     }
 
     private void shutdownCleanup() {
-        s_logger.info("Cleanup mounted NFS mount points used in current session");
+        logger.info("Cleanup mounted NFS mount points used in current session");
 
         for (String mountPoint : _storageMounts.values()) {
-            s_logger.info("umount NFS mount: " + mountPoint);
+            logger.info("umount NFS mount: " + mountPoint);
 
-            String result = null;
-            Script command = new Script(true, "umount", _timeout, s_logger);
+            Script command = new Script(true, "umount", _timeout, logger);
             command.add(mountPoint);
-            result = command.execute();
+            String result = command.execute();
             if (result != null) {
-                s_logger.warn("Unable to umount " + mountPoint + " due to " + result);
+                logger.warn("Unable to umount " + mountPoint + " due to " + result);
             }
             File file = new File(mountPoint);
             if (file.exists()) {
@@ -892,13 +898,13 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
     protected String mount(String path, String parent, String nfsVersion) {
         String mountPoint = setupMountPoint(parent);
         if (mountPoint == null) {
-            s_logger.warn("Unable to create a mount point");
+            logger.warn("Unable to create a mount point");
             return null;
         }
 
-        Script script = null;
-        String result = null;
-        Script command = new Script(true, "mount", _timeout, s_logger);
+        Script script;
+        String result;
+        Script command = new Script(true, "mount", _timeout, logger);
         command.add("-t", "nfs");
         if (nfsVersion != null){
             command.add("-o", "vers=" + nfsVersion);
@@ -911,7 +917,7 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
         command.add(mountPoint);
         result = command.execute();
         if (result != null) {
-            s_logger.warn("Unable to mount " + path + " due to " + result);
+            logger.warn("Unable to mount " + path + " due to " + result);
             File file = new File(mountPoint);
             if (file.exists()) {
                 file.delete();
@@ -920,11 +926,11 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
         }
 
         // Change permissions for the mountpoint
-        script = new Script(true, "chmod", _timeout, s_logger);
+        script = new Script(true, "chmod", _timeout, logger);
         script.add("1777", mountPoint);
         result = script.execute();
         if (result != null) {
-            s_logger.warn("Unable to set permissions for " + mountPoint + " due to " + result);
+            logger.warn("Unable to set permissions for " + mountPoint + " due to " + result);
         }
         return mountPoint;
     }
@@ -984,11 +990,9 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
 
     @Override
     public void processConnect(Host host, StartupCommand cmd, boolean forRebalance) {
-        if (cmd instanceof StartupCommand) {
+        if (cmd != null) {
             if (host.getHypervisorType() == HypervisorType.VMware) {
                 updateClusterNativeHAState(host, cmd);
-            } else {
-                return;
             }
         }
     }
@@ -996,8 +1000,8 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
     protected final static int DEFAULT_DOMR_SSHPORT = 3922;
 
     protected boolean shutdownRouterVM(DomainRouterVO router) {
-        if (s_logger.isDebugEnabled()) {
-            s_logger.debug("Try to shutdown router VM " + router.getInstanceName() + " directly.");
+        if (logger.isDebugEnabled()) {
+            logger.debug("Try to shutdown router VM " + router.getInstanceName() + " directly.");
         }
 
         Pair<Boolean, String> result;
@@ -1005,15 +1009,15 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
             result = SshHelper.sshExecute(router.getPrivateIpAddress(), DEFAULT_DOMR_SSHPORT, "root", getSystemVMKeyFile(), null, "poweroff -f");
 
             if (!result.first()) {
-                s_logger.debug("Unable to shutdown " + router.getInstanceName() + " directly");
+                logger.debug("Unable to shutdown " + router.getInstanceName() + " directly");
                 return false;
             }
         } catch (Throwable e) {
-            s_logger.warn("Unable to shutdown router " + router.getInstanceName() + " directly.");
+            logger.warn("Unable to shutdown router " + router.getInstanceName() + " directly.");
             return false;
         }
-        if (s_logger.isDebugEnabled()) {
-            s_logger.debug("Shutdown router " + router.getInstanceName() + " successful.");
+        if (logger.isDebugEnabled()) {
+            logger.debug("Shutdown router " + router.getInstanceName() + " successful.");
         }
         return true;
     }
@@ -1058,32 +1062,32 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
 
     @Override
     public Pair<Integer, Integer> getAddiionalVncPortRange() {
-        return new Pair<Integer, Integer>(_additionalPortRangeStart, _additionalPortRangeSize);
+        return new Pair<>(_additionalPortRangeStart, _additionalPortRangeSize);
     }
 
     @Override
     public Map<String, String> getNexusVSMCredentialsByClusterId(Long clusterId) {
-        CiscoNexusVSMDeviceVO nexusVSM = null;
-        ClusterVSMMapVO vsmMapVO = null;
+        CiscoNexusVSMDeviceVO nexusVSM;
+        ClusterVSMMapVO vsmMapVO;
 
         vsmMapVO = _vsmMapDao.findByClusterId(clusterId);
-        long vsmId = 0;
+        long vsmId;
         if (vsmMapVO != null) {
             vsmId = vsmMapVO.getVsmId();
-            s_logger.info("vsmId is " + vsmId);
+            logger.info("vsmId is " + vsmId);
             nexusVSM = _nexusDao.findById(vsmId);
-            s_logger.info("Fetching nexus vsm credentials from database.");
+            logger.info("Fetching nexus vsm credentials from database.");
         } else {
-            s_logger.info("Found empty vsmMapVO.");
+            logger.info("Found empty vsmMapVO.");
             return null;
         }
 
-        Map<String, String> nexusVSMCredentials = new HashMap<String, String>();
+        Map<String, String> nexusVSMCredentials = new HashMap<>();
         if (nexusVSM != null) {
             nexusVSMCredentials.put("vsmip", nexusVSM.getipaddr());
             nexusVSMCredentials.put("vsmusername", nexusVSM.getUserName());
             nexusVSMCredentials.put("vsmpassword", nexusVSM.getPassword());
-            s_logger.info("Successfully fetched the credentials of Nexus VSM.");
+            logger.info("Successfully fetched the credentials of Nexus VSM.");
         }
         return nexusVSMCredentials;
     }
@@ -1105,7 +1109,7 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
 
     @Override
     public List<Class<?>> getCommands() {
-        List<Class<?>> cmdList = new ArrayList<Class<?>>();
+        List<Class<?>> cmdList = new ArrayList<>();
         cmdList.add(AddVmwareDcCmd.class);
         cmdList.add(UpdateVmwareDcCmd.class);
         cmdList.add(RemoveVmwareDcCmd.class);
@@ -1114,13 +1118,14 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
         cmdList.add(ListVsphereStoragePoliciesCmd.class);
         cmdList.add(ListVsphereStoragePolicyCompatiblePoolsCmd.class);
         cmdList.add(ListVmwareDcVmsCmd.class);
+        cmdList.add(ListVmwareDcHostsCmd.class);
         return cmdList;
     }
 
     @Override
     @DB
     public VmwareDatacenterVO addVmwareDatacenter(AddVmwareDcCmd cmd) throws ResourceInUseException {
-        VmwareDatacenterVO vmwareDc = null;
+        VmwareDatacenterVO vmwareDc;
         Long zoneId = cmd.getZoneId();
         String userName = cmd.getUsername();
         String password = cmd.getPassword();
@@ -1161,7 +1166,7 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
             Long associatedVmwareDcId = vmwareDcZoneMap.getVmwareDcId();
             VmwareDatacenterVO associatedVmwareDc = vmwareDcDao.findById(associatedVmwareDcId);
             if (associatedVmwareDc.getVcenterHost().equalsIgnoreCase(vCenterHost) && associatedVmwareDc.getVmwareDatacenterName().equalsIgnoreCase(vmwareDcName)) {
-                s_logger.info("Ignoring API call addVmwareDc, because VMware DC " + vCenterHost + "/" + vmwareDcName +
+                logger.info("Ignoring API call addVmwareDc, because VMware DC " + vCenterHost + "/" + vmwareDcName +
                         " is already associated with specified zone with id " + zoneId);
                 return associatedVmwareDc;
             } else {
@@ -1176,10 +1181,10 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
         checkIfDcIsUsed(vCenterHost, vmwareDcName, zoneId);
 
         VmwareContext context = null;
-        DatacenterMO dcMo = null;
+        DatacenterMO dcMo;
         String dcCustomFieldValue;
         boolean addDcCustomFieldDef = false;
-        boolean dcInUse = false;
+        boolean dcInUse;
         String guid;
         ManagedObjectReference dcMor;
         try {
@@ -1190,7 +1195,7 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
             dcMor = dcMo.getMor();
             if (dcMor == null) {
                 String msg = "Unable to find VMware DC " + vmwareDcName + " in vCenter " + vCenterHost + ". ";
-                s_logger.error(msg);
+                logger.error(msg);
                 throw new InvalidParameterValueException(msg);
             }
 
@@ -1212,7 +1217,7 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
                 // Map zone with vmware datacenter
             vmwareDcZoneMap = new VmwareDatacenterZoneMapVO(zoneId, vmwareDc.getId());
 
-            vmwareDcZoneMap = vmwareDatacenterZoneMapDao.persist(vmwareDcZoneMap);
+            vmwareDatacenterZoneMapDao.persist(vmwareDcZoneMap);
 
             // Set custom field for this DC
             if (addDcCustomFieldDef) {
@@ -1232,7 +1237,6 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
             if (context != null) {
                 context.close();
             }
-            context = null;
         }
         importVsphereStoragePoliciesInternal(zoneId, vmwareDc.getId());
         return vmwareDc;
@@ -1257,9 +1261,9 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
      * Check if DC is already part of zone
      * In that case vmware_data_center table should have the DC and a dc zone mapping should exist
      *
-     * @param vCenterHost
-     * @param vmwareDcName
-     * @param zoneId
+     * @param vCenterHost the vcenter appliance hostname
+     * @param vmwareDcName the name of the vmware DC
+     * @param zoneId zone that the DC should be connected to
      * @throws ResourceInUseException if the DC can not be used.
      */
     private void checkIfDcIsUsed(String vCenterHost, String vmwareDcName, Long zoneId) throws ResourceInUseException {
@@ -1267,7 +1271,7 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
         vmwareDc = vmwareDcDao.getVmwareDatacenterByGuid(vmwareDcName + "@" + vCenterHost);
         if (vmwareDc != null) {
             VmwareDatacenterZoneMapVO mapping = vmwareDatacenterZoneMapDao.findByVmwareDcId(vmwareDc.getId());
-            if (mapping != null && Long.compare(zoneId, mapping.getZoneId()) == 0) {
+            if (mapping != null && zoneId == mapping.getZoneId()) {
                 throw new ResourceInUseException(String.format("This DC (%s) is already part of other CloudStack zone (%d). Cannot add this DC to more zones.", vmwareDc.getUuid(), zoneId));
             }
         }
@@ -1276,7 +1280,7 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
     @Override
     @ActionEvent(eventType = EventTypes.EVENT_ZONE_EDIT, eventDescription = "updating VMware datacenter")
     public VmwareDatacenter updateVmwareDatacenter(UpdateVmwareDcCmd cmd) {
-        final Long zoneId = cmd.getZoneId();
+        final long zoneId = cmd.getZoneId();
         final String userName = cmd.getUsername();
         final String password = cmd.getPassword();
         final String vCenterHost = cmd.getVcenter();
@@ -1304,7 +1308,7 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
         }
         vmwareDc.setGuid(String.format("%s@%s", vmwareDc.getVmwareDatacenterName(), vmwareDc.getVcenterHost()));
 
-        return Transaction.execute(new TransactionCallback<VmwareDatacenter>() {
+        return Transaction.execute(new TransactionCallback<>() {
             @Override
             public VmwareDatacenter doInTransaction(TransactionStatus status) {
                 if (vmwareDcDao.update(vmwareDc.getId(), vmwareDc)) {
@@ -1353,7 +1357,7 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
         String vCenterHost;
         String userName;
         String password;
-        DatacenterMO dcMo = null;
+        DatacenterMO dcMo;
         final VmwareDatacenterZoneMapVO vmwareDcZoneMap = vmwareDatacenterZoneMapDao.findByZoneId(zoneId);
         // Check if zone is associated with VMware DC
         if (vmwareDcZoneMap == null) {
@@ -1386,24 +1390,21 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
                 dcMo = new DatacenterMO(context, vmwareDcName);
             } catch (Throwable t) {
                 String msg = "Unable to find DC " + vmwareDcName + " in vCenter " + vCenterHost;
-                s_logger.error(msg);
+                logger.error(msg);
                 throw new DiscoveryException(msg);
             }
 
-            assert (dcMo != null);
-
             // Reset custom field property cloud.zone over this DC
             dcMo.setCustomFieldValue(CustomFieldConstants.CLOUD_ZONE, "false");
-            s_logger.info("Sucessfully reset custom field property cloud.zone over DC " + vmwareDcName);
+            logger.info("Sucessfully reset custom field property cloud.zone over DC {}", vmwareDcName);
         } catch (Exception e) {
             String msg = "Unable to reset custom field property cloud.zone over DC " + vmwareDcName + " due to : " + VmwareHelper.getExceptionMessage(e);
-            s_logger.error(msg);
+            logger.error(msg);
             throw new CloudRuntimeException(msg);
         } finally {
             if (context != null) {
                 context.close();
             }
-            context = null;
         }
         return true;
     }
@@ -1415,8 +1416,8 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
         if (isLegacyZone(zoneId)) {
             throw new InvalidParameterValueException("The specified zone is legacy zone. Adding VMware datacenter to legacy zone is not supported.");
         } else {
-            if (s_logger.isTraceEnabled()) {
-                s_logger.trace("The specified zone is not legacy zone.");
+            if (logger.isTraceEnabled()) {
+                logger.trace("The specified zone is not legacy zone.");
             }
         }
     }
@@ -1424,7 +1425,7 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
     private void validateZoneWithResources(Long zoneId, String errStr) throws ResourceInUseException {
         // Check if zone has resources? - For now look for clusters
         List<ClusterVO> clusters = clusterDao.listByZoneId(zoneId);
-        if (clusters != null && clusters.size() > 0) {
+        if (!CollectionUtils.isNullOrEmpty(clusters)) {
             // Look for VMware hypervisor.
             for (ClusterVO cluster : clusters) {
                 if (cluster.getHypervisorType().equals(HypervisorType.VMware)) {
@@ -1445,9 +1446,9 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
     }
 
     @Override
-    public List<? extends VmwareDatacenter> listVmwareDatacenters(ListVmwareDcsCmd cmd) throws CloudRuntimeException, InvalidParameterValueException {
+    public List<? extends VmwareDatacenter> listVmwareDatacenters(ListVmwareDcsCmd cmd) throws CloudRuntimeException {
         Long zoneId = cmd.getZoneId();
-        List<VmwareDatacenterVO> vmwareDcList = new ArrayList<VmwareDatacenterVO>();
+        List<VmwareDatacenterVO> vmwareDcList = new ArrayList<>();
         VmwareDatacenterZoneMapVO vmwareDcZoneMap;
         VmwareDatacenterVO vmwareDatacenter;
         long vmwareDcId;
@@ -1476,8 +1477,8 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
         if (zone == null) {
             throw new InvalidParameterValueException("Can't find zone by the id specified.");
         }
-        if (s_logger.isTraceEnabled()) {
-            s_logger.trace("Zone with id:[" + zoneId + "] exists.");
+        if (logger.isTraceEnabled()) {
+            logger.trace("Zone with id:[" + zoneId + "] exists.");
         }
     }
 
@@ -1505,16 +1506,16 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
         String vCenterHost = vmwareDatacenter.getVcenterHost();
         String userName = vmwareDatacenter.getUser();
         String password = vmwareDatacenter.getPassword();
-        List<PbmProfile> storageProfiles = null;
+        List<PbmProfile> storageProfiles;
         try {
-            s_logger.debug(String.format("Importing vSphere Storage Policies for the vmware DC %d in zone %d", vmwareDcId, zoneId));
+            logger.debug(String.format("Importing vSphere Storage Policies for the vmware DC %d in zone %d", vmwareDcId, zoneId));
             VmwareContext context = VmwareContextFactory.getContext(vCenterHost, userName, password);
             PbmProfileManagerMO profileManagerMO = new PbmProfileManagerMO(context);
             storageProfiles = profileManagerMO.getStorageProfiles();
-            s_logger.debug(String.format("Import vSphere Storage Policies for the vmware DC %d in zone %d is successful", vmwareDcId, zoneId));
+            logger.debug(String.format("Import vSphere Storage Policies for the vmware DC %d in zone %d is successful", vmwareDcId, zoneId));
         } catch (Exception e) {
             String msg = String.format("Unable to list storage profiles from DC %s due to : %s", vmwareDcName, VmwareHelper.getExceptionMessage(e));
-            s_logger.error(msg);
+            logger.error(msg);
             throw new CloudRuntimeException(msg);
         }
 
@@ -1533,16 +1534,15 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
         List<VsphereStoragePolicyVO> allStoragePolicies = vsphereStoragePolicyDao.listAll();
         List<PbmProfile> finalStorageProfiles = storageProfiles;
         List<VsphereStoragePolicyVO> needToMarkRemoved = allStoragePolicies.stream()
-                .filter(existingPolicy -> !finalStorageProfiles.stream()
-                    .anyMatch(storageProfile -> storageProfile.getProfileId().getUniqueId().equals(existingPolicy.getPolicyId())))
+                .filter(existingPolicy -> finalStorageProfiles.stream()
+                    .noneMatch(storageProfile -> storageProfile.getProfileId().getUniqueId().equals(existingPolicy.getPolicyId())))
                 .collect(Collectors.toList());
 
         for (VsphereStoragePolicyVO storagePolicy : needToMarkRemoved) {
             vsphereStoragePolicyDao.remove(storagePolicy.getId());
         }
 
-        List<VsphereStoragePolicyVO> storagePolicies = vsphereStoragePolicyDao.listAll();
-        return storagePolicies;
+        return vsphereStoragePolicyDao.listAll();
     }
 
     @Override
@@ -1568,7 +1568,7 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
             StorageFilerTO storageFilerTO = new StorageFilerTO(pool);
             List<Long> hostIds = storageManager.getUpHostsInPool(pool.getId());
             if (CollectionUtils.isNullOrEmpty(hostIds)) {
-                s_logger.debug("Did not find a suitable host to verify compatibility of the pool " + pool.getName());
+                logger.debug("Did not find a suitable host to verify compatibility of the pool " + pool.getName());
                 continue;
             }
             Collections.shuffle(hostIds);
@@ -1581,20 +1581,94 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
                     compatiblePools.add(pool);
                 }
             } catch (AgentUnavailableException | OperationTimedoutException e) {
-                s_logger.error("Could not verify if storage policy " + storagePolicy.getName() + " is compatible with storage pool " + pool.getName());
+                logger.error("Could not verify if storage policy " + storagePolicy.getName() + " is compatible with storage pool " + pool.getName());
             }
         }
         return compatiblePools;
     }
 
     @Override
-    public List<UnmanagedInstanceTO> listVMsInDatacenter(ListVmwareDcVmsCmd cmd) {
+    public List<HostMO> listHostsInDatacenter(ListVmwareDcHostsCmd cmd) {
+        VcenterData vmwaredc = getVcenterData(cmd);
+
+        try {
+            VmwareContext context = getVmwareContext(vmwaredc);
+            DatacenterMO dcMo = getDatacenterMO(context, vmwaredc);
+            return dcMo.getAllHostsOnDatacenter();
+        } catch (RuntimeFaultFaultMsg | URISyntaxException | VmwareClientException | InvalidLocaleFaultMsg |
+                 InvalidLoginFaultMsg | InvalidPropertyFaultMsg e) {
+            String errorMsg = String.format("Error retrieving stopped VMs from the VMware VC %s datacenter %s: %s",
+                    vmwaredc.vcenter, vmwaredc.datacenterName, e.getMessage());
+            logger.error(errorMsg, e);
+            throw new CloudRuntimeException(errorMsg);
+        }
+
+    }
+
+    @Override
+    public Pair<String, List<UnmanagedInstanceTO>> listVMsInDatacenter(ListVmwareDcVmsCmd cmd) {
+        Integer maxObjects = cmd.getBatchSize();
+        String token = cmd.getToken();
+        String host = cmd.getHost();
+
+        VcenterData vmwaredc = getVcenterData(cmd);
+
+        try {
+            VmwareContext context = getVmwareContext(vmwaredc);
+
+            DatacenterMO dcMo = getDatacenterMO(context, vmwaredc);
+
+            if (com.cloud.utils.StringUtils.isNotBlank(host)) {
+                ManagedObjectReference hostMor = dcMo.findHost(host);
+                if (hostMor == null) {
+                    throw new VmwareClientException(String.format("No host '%s' found on DC: %s.", host, dcMo.getName()));
+                }
+                HostMO hostMo = new HostMO(context, hostMor);
+                return hostMo.getVms(maxObjects, token);
+            } else {
+                return dcMo.getVms(maxObjects, token);
+            }
+        } catch (InvalidParameterValueException | VmwareClientException | InvalidLocaleFaultMsg | InvalidLoginFaultMsg |
+                 RuntimeFaultFaultMsg | URISyntaxException | InvalidPropertyFaultMsg | InvocationTargetException |
+                 NoSuchMethodException | IllegalAccessException e) {
+            String errorMsg = String.format("Error retrieving stopped VMs from the VMware VC %s datacenter %s: %s",
+                    vmwaredc.vcenter, vmwaredc.datacenterName, e.getMessage());
+            logger.error(errorMsg, e);
+            throw new CloudRuntimeException(errorMsg);
+        }
+    }
+
+    @NotNull
+    private DatacenterMO getDatacenterMO(VmwareContext context, VcenterData vmwaredc) throws InvalidPropertyFaultMsg, RuntimeFaultFaultMsg {
+        DatacenterMO dcMo = new DatacenterMO(context, vmwaredc.datacenterName);
+        ManagedObjectReference dcMor = dcMo.getMor();
+        if (dcMor == null) {
+            String msg = String.format("Unable to find VMware datacenter %s in vCenter %s",
+                    vmwaredc.datacenterName, vmwaredc.vcenter);
+            logger.error(msg);
+            throw new InvalidParameterValueException(msg);
+        }
+        return dcMo;
+    }
+
+    @NotNull
+    private VmwareContext getVmwareContext(VcenterData vmwaredc) throws RuntimeFaultFaultMsg, URISyntaxException, VmwareClientException, InvalidLocaleFaultMsg, InvalidLoginFaultMsg {
+        logger.debug(String.format("Connecting to the VMware datacenter %s at vCenter %s to retrieve VMs",
+                vmwaredc.datacenterName, vmwaredc.vcenter));
+        String serviceUrl = String.format("https://%s/sdk/vimService", vmwaredc.vcenter);
+        VmwareClient vimClient = new VmwareClient(vmwaredc.vcenter);
+        vimClient.connect(serviceUrl, vmwaredc.username, vmwaredc.password);
+        VmwareContext context = new VmwareContext(vimClient, vmwaredc.vcenter);
+        return context;
+    }
+
+    @NotNull
+    private VcenterData getVcenterData(ListVmwareDcItems cmd) {
         String vcenter = cmd.getVcenter();
         String datacenterName = cmd.getDatacenterName();
         String username = cmd.getUsername();
         String password = cmd.getPassword();
         Long existingVcenterId = cmd.getExistingVcenterId();
-        String keyword = cmd.getKeyword();
 
         if ((existingVcenterId == null && StringUtils.isBlank(vcenter)) ||
                 (existingVcenterId != null && StringUtils.isNotBlank(vcenter))) {
@@ -1615,59 +1689,49 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
             username = vmwareDc.getUser();
             password = vmwareDc.getPassword();
         }
+        VcenterData vmwaredc = new VcenterData(vcenter, datacenterName, username, password);
+        return vmwaredc;
+    }
 
-        try {
-            s_logger.debug(String.format("Connecting to the VMware datacenter %s at vCenter %s to retrieve VMs",
-                    datacenterName, vcenter));
-            String serviceUrl = String.format("https://%s/sdk/vimService", vcenter);
-            VmwareClient vimClient = new VmwareClient(vcenter);
-            vimClient.connect(serviceUrl, username, password);
-            VmwareContext context = new VmwareContext(vimClient, vcenter);
+    private static class VcenterData {
+        public final String vcenter;
+        public final String datacenterName;
+        public final String username;
+        public final String password;
 
-            DatacenterMO dcMo = new DatacenterMO(context, datacenterName);
-            ManagedObjectReference dcMor = dcMo.getMor();
-            if (dcMor == null) {
-                String msg = String.format("Unable to find VMware datacenter %s in vCenter %s",
-                        datacenterName, vcenter);
-                s_logger.error(msg);
-                throw new InvalidParameterValueException(msg);
-            }
-            List<UnmanagedInstanceTO> instances = dcMo.getAllVmsOnDatacenter();
-            return StringUtils.isBlank(keyword) ? instances :
-                    instances.stream().filter(x -> x.getName().toLowerCase().contains(keyword.toLowerCase())).collect(Collectors.toList());
-        } catch (Exception e) {
-            String errorMsg = String.format("Error retrieving stopped VMs from the VMware VC %s datacenter %s: %s",
-                    vcenter, datacenterName, e.getMessage());
-            s_logger.error(errorMsg, e);
-            throw new CloudRuntimeException(errorMsg);
+        public VcenterData(String vcenter, String datacenterName, String username, String password) {
+            this.vcenter = vcenter;
+            this.datacenterName = datacenterName;
+            this.username = username;
+            this.password = password;
         }
     }
 
     @Override
     public boolean hasNexusVSM(Long clusterId) {
-        ClusterVSMMapVO vsmMapVo = null;
+        ClusterVSMMapVO vsmMapVo;
 
         vsmMapVo = _vsmMapDao.findByClusterId(clusterId);
         if (vsmMapVo == null) {
-            s_logger.info("There is no instance of Nexus 1000v VSM associated with this cluster [Id:" + clusterId + "] yet.");
+            logger.info("There is no instance of Nexus 1000v VSM associated with this cluster [Id:" + clusterId + "] yet.");
             return false;
         }
         else {
-            s_logger.info("An instance of Nexus 1000v VSM [Id:" + vsmMapVo.getVsmId() + "] associated with this cluster [Id:" + clusterId + "]");
+            logger.info("An instance of Nexus 1000v VSM [Id:" + vsmMapVo.getVsmId() + "] associated with this cluster [Id:" + clusterId + "]");
             return true;
         }
     }
 
     private void startTemplateCleanJobSchedule() {
-        if(s_logger.isDebugEnabled()) {
-            s_logger.debug("checking to see if we should schedule a job to search for fully cloned templates to clean-up");
+        if(logger.isDebugEnabled()) {
+            logger.debug("checking to see if we should schedule a job to search for fully cloned templates to clean-up");
         }
         if(StorageManager.StorageCleanupEnabled.value() &&
                 StorageManager.TemplateCleanupEnabled.value() &&
                 templateCleanupInterval.value() > 0) {
             try {
-                if (s_logger.isInfoEnabled()) {
-                    s_logger.info("scheduling job to search for fully cloned templates to clean-up once per " + templateCleanupInterval.value() + " minutes.");
+                if (logger.isInfoEnabled()) {
+                    logger.info("scheduling job to search for fully cloned templates to clean-up once per " + templateCleanupInterval.value() + " minutes.");
                 }
 //                    futureTemplateCleanup =
                 Runnable task = getCleanupFullyClonedTemplatesTask();
@@ -1675,27 +1739,27 @@ public class VmwareManagerImpl extends ManagerBase implements VmwareManager, Vmw
                         templateCleanupInterval.value(),
                         templateCleanupInterval.value(),
                         TimeUnit.MINUTES);
-                if (s_logger.isTraceEnabled()) {
-                    s_logger.trace("scheduled job to search for fully cloned templates to clean-up.");
+                if (logger.isTraceEnabled()) {
+                    logger.trace("scheduled job to search for fully cloned templates to clean-up.");
                 }
             } catch (RejectedExecutionException ree) {
-                s_logger.error("job to search for fully cloned templates cannot be scheduled");
-                s_logger.debug("job to search for fully cloned templates cannot be scheduled;", ree);
+                logger.error("job to search for fully cloned templates cannot be scheduled");
+                logger.debug("job to search for fully cloned templates cannot be scheduled;", ree);
             } catch (NullPointerException npe) {
-                s_logger.error("job to search for fully cloned templates is invalid");
-                s_logger.debug("job to search for fully cloned templates is invalid;", npe);
+                logger.error("job to search for fully cloned templates is invalid");
+                logger.debug("job to search for fully cloned templates is invalid;", npe);
             } catch (IllegalArgumentException iae) {
-                s_logger.error("job to search for fully cloned templates is scheduled at invalid intervals");
-                s_logger.debug("job to search for fully cloned templates is scheduled at invalid intervals;", iae);
+                logger.error("job to search for fully cloned templates is scheduled at invalid intervals");
+                logger.debug("job to search for fully cloned templates is scheduled at invalid intervals;", iae);
             } catch (Exception e) {
-                s_logger.error("job to search for fully cloned templates failed for unknown reasons");
-                s_logger.debug("job to search for fully cloned templates failed for unknown reasons;", e);
+                logger.error("job to search for fully cloned templates failed for unknown reasons");
+                logger.debug("job to search for fully cloned templates failed for unknown reasons;", e);
             }
         }
     }
 
     /**
-     * This task is to cleanup templates from primary storage that are otherwise not cleaned by the {@link com.cloud.storage.StorageManagerImpl.StorageGarbageCollector}.
+     * This task is to clean-up templates from primary storage that are otherwise not cleaned by the {@see com.cloud.storage.StorageManagerImpl.StorageGarbageCollector}.
      * it is called at regular intervals when storage.template.cleanup.enabled == true
      * It collect all templates that
      * - are deleted from cloudstack
